# pitank_simulador_ai

configurations/: config.launch
src/ai/: CMakeLists.txt  package.xml
src/ai/include/ai/: control.hpp
src/ai/src/: control.cpp
src/apriltags_ros/apriltags/src/: TagDetector.cc
src/apriltags_ros/apriltags_ros/include/apriltags_ros/: apriltag_detector.h
src/apriltags_ros/apriltags_ros/src/: apriltag_detector.cpp
src/controls/: CMakeLists.txt  controls.launch  package.xml
src/controls/include/joystick/: joystick.hpp
src/controls/include/xbee/: xbee.hpp
src/controls/src/: joystick.cpp  key_input.cpp  xbee.cpp  xbee_node.cpp
src/game_engine/: CMakeLists.txt  game.launch  mainpage.dox  package.xml
src/game_engine-build/: CMakeCache.txt
src/game_engine/include/graphics/: dialog.hpp  main_window.hpp
src/game_engine/include/objects/: bullet.hpp  circle.hpp  controller.hpp  explosion.hpp  game_clock.hpp  grid.hpp  machine.hpp  map.hpp  pallet.hpp  person.hpp  racemap.hpp  tag.hpp  wall.hpp
src/game_engine/include/utils/: rosConnection.hpp  system_info.hpp
src/game_engine/msg/: RobotDescription.msg  RobotDescriptionArray.msg  ShootAndTurbo.msg  UIState.msg  WallInfo.msg  WallInfoArray.msg
src/game_engine/src/: main.cpp
src/game_engine/src/graphics/: dialog.cpp  main_window.cpp  map_drawer.cpp
src/game_engine/src/objects/: bullet.cpp  circle.cpp  controller.cpp  explosion.cpp  game_clock.cpp  grid.cpp  machine.cpp  map.cpp  pallet.cpp  person.cpp  racemap.cpp  tag.cpp  wall.cpp
src/game_engine/src/utils/: rosConnection.cpp
src/game_engine/ui/: dialog.ui  main_window.ui
src/projector_calib/: CMakeLists.txt  p_calib.launch  package.xml
src/projector_calib/src/: p_calib.cpp  p_calib_node.cpp
src/projector_calib/src/projector_calib/: p_calib.h
src/simulator/: CMakeLists.txt  one_robot.launch  package.xml  robots.launch
src/simulator/robot_description/: ball.urdf  m2wrA (copy).urdf  m2wrA.urdf  m2wrA.xacro  m2wrAbackup.xacro  m2wrAfixe.urdf  m2wrAfixefixe.urdf
src/uvc_camera/calibration/: ost.yaml
src/uvc_camera/launch/: camera_nodelet.launch
src/uvc_camera/src/: camera.cpp
